# LLMNotes

./: PythonNeuralNetworks.md  README.md
Week1/: ActivationFunctions.md  DiachronicWordEmbeddings.py  LLM_Studies-Dec-31-2024.md  LLM_Studies-Nov-17-2024.md  LLM_Studies-Nov-18-2024.md  LLM_Studies-Nov-19-2024.md  LLM_Studies-Nov-21-2024.md  LLM_studies-Nov-22-2024.md  MacronPositionalEncodingImproved.py  Prosody-AwareAttentionMechanism.py  activation_functions.py  hoc.py
Week1/Latin_side_quest/: Macron-AwareSubwordTokenization.py  MacronPositionEncoding.py
Week2/: AfterKandV.md  AutoencodingNotes.md  CreatingDeepandWideNeuralNetworks.md  HardcoreKubernetesk3d.md  LLM_Studies-Nov-24-2024.md  LLM_Studies-Nov-27-2024.md  Output.md  Positional_Encoding_Formula.md  Research.md  RustLifetimes.md  RustTraits.md  almost_orthogonal.py  k3d-secure.yaml  llama_tests.py  multiheadattention.py  query_ollama.nu  yi.py
Week3/: AgenticReasoningPatterns.md  LLM_Studies-Dec-01-2024.md  Modelfile  UseEncryptionwithJenkins.md  VimResearch.md  k3d-secure.yaml  llm-cli.md  ollama-classical-latin-test.md
Week5/: Learnings.md
Week5/single_cell_simulation/: README.md  main.py  pyproject.toml
Week5/single_cell_simulation/single_cell_simulation/: environment.py  organism.py  simulation.py
Week6/: LongRoPEtranscribedon28-Dec-202400-17-48.txt  Meshtastic.md  Titan_Continuous_Improvement.md  Titan_Scheduling.md  bubblesort.py  getrandom.py  outlines_random_number.py  skyrim_prompt.txt
Week6/korean_finetune/: README.md  app.py  pyproject.toml
nnfs/: Makefile  README.md  go.mod
(+24 files in other folders)
