[project]
name = "korean-finetune"
version = "0.1.0"
description = "A demo of using Unsloth to finetune models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers",
    "datasets",
    "peft",
    "accelerate",
    "bitsandbytes",
    "trl<0.9.0",
    "xformers==0.0.24",
    "unsloth"
]

[tool.poetry.dependencies]
trl = "^0.9.6"
nvitop = "^1.3.2"
xformers = "0.0.27"
peft = "^0.12.0"
accelerate = "^0.33.0"
bitsandbytes = "^0.43.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

